--- a/resume.tex
+++ b/resume.tex
@@ -164,7 +164,7 @@
       \resumeItem{Designed and deployed a containerized PostgreSQL database to store price data and portfolio activity, providing a consolidated source for portfolio information and reducing time spent searching for data}
       \resumeItem{Heading team recruitment by reviewing resumes, creating coding challenges, and conducting interviews, ensuring continuity in the team’s operations in future semesters}
     \resumeItemListEnd
-    \resumeSubheading{Stevens NCAA Division III Fencing Team}{September 2022 -- Present}{Starting Team Member}{\empty}
+    \resumeSubheading{Starting Team Member}{September 2022 -- Present}{Stevens NCAA Division III Fencing Team}{\empty}
     \resumeItemListStart
       \resumeItem{Committing approximately 30 hours per week to practice, conditioning, and travel to ~12 meets per season}
       \resumeItem{Strengthened leadership and coaching skills under a high-pressure, stressful environment}
