--- a/resume.tex
+++ b/resume.tex
@@ -122,8 +122,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Stevens Institute of Technology}{Hoboken, NJ}
-      {Bachelor of Science in Computer Science}{Expected May 2026}
+      {Stevens Institute of Technology}{September 2022 -- May 2026}
+      {Bachelor of Science in Computer Science}{Hoboken, NJ}
     \resumeSubItem{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
   \resumeSubHeadingListEnd
 
