--- a/resume.tex
+++ b/resume.tex
@@ -113,8 +113,8 @@
 
 \begin{center}
     \textbf{\Huge \scshape Andrew Yurovchak} \\ \vspace{3pt}
-    \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{andy@yurovchak.net}} $|$ \small{Hoboken, NJ} $|$
-    \href{https://portfolio.super-youtube.com}{\underline{portfolio.super-youtube.com}} \\ \vspace{-3pt}
+    \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} $|$
+    \href{https://portfolio.super-youtube.com}{\underline{\smash{portfolio.super-youtube.com}}} \\ \vspace{-3pt}
 \end{center}
 
 
@@ -174,19 +174,19 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading{\textbf{Sticky Notes Application} $|$ \href{https://github.com/andrewyur/md-sticky}{\underline{https://github.com/andrewyur/md-sticky}}}{September 2024}
+      \resumeProjectHeading{\textbf{Sticky Notes Application} $|$ \href{https://github.com/andrewyur/md-sticky}{\underline{\smash{https://github.com/andrewyur/md-sticky}}}}{September 2024}
       \resumeItemListStart
         \resumeItem{Developed a sticky notes app to fit my personal workflow after being dissatisfied with existing options, creating a tool which I now use daily}
         \resumeItem{Added a text editor with markdown support, a color selection menu, and keyboard shortcuts for window management}
       \resumeItemListEnd
-      \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://collab-notepad.super-youtube.com}{\underline{https://collab-notepad.super-youtube.com}}}{
+      \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://collab-notepad.super-youtube.com}{\underline{\smash{https://collab-notepad.super-youtube.com}}}}{
         June 2024 -- August 2024}
       \resumeItemListStart
         \resumeItem{Built a collaborative text editor using my own Operational Transformation algorithm, ensuring both responsiveness and accuracy on slow connections}
         \resumeItem{Designed an Elixir backend with WebSocket API to enable communication between the server and web clients, using Erlang’s OTP library to improve fault tolerance}
       \resumeItemListEnd
       \resumeProjectHeading{\textbf{QR Image Encoder} $|$ \href{https://crates.io/crates/qart
-      }{\underline{https://crates.io/crates/qart
+      }{\underline{\smash{https://crates.io/crates/qart}
       }}}{June 2024}
       \resumeItemListStart
         \resumeItem{Published a Rust-based QR image encoder that surpassed 350 downloads in 10 days, utilizing multithreading to achieve 100x performance improvement over comparable tools}
@@ -197,7 +197,7 @@
 
 %
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
+\section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS} \\
