--- a/resume.tex
+++ b/resume.tex
@@ -112,9 +112,9 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Andrew Yurovchak} \\ \vspace{3pt}
-    \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} $|$
-    \href{https://portfolio.super-youtube.com}{\underline{\smash{portfolio.super-youtube.com}}} \\ \vspace{-3pt}
+    \textbf{\Huge \scshape Firstname Lastname} \\ \vspace{3pt}
+    \small 123-456-7890 $|$ \href{mailto:my@email.com}{\underline{\smash{my@email.com}}} $|$ \small{City, State} $|$
+    \href{https://portfolio-website.com}{\underline{\smash{portfolio-website.com}}} \\ \vspace{-3pt}
 \end{center}
 
 
@@ -122,8 +122,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Stevens Institute of Technology}{September 2022 -- May 2026}
-      {Bachelor of Science in Computer Science}{Hoboken, NJ}
+      {Small School in the NYC Area}{September 2022 -- May 2026}
+      {Bachelor of Science in Computer Science}{City, State}
     \resumeSubItem{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
   \resumeSubHeadingListEnd
 
@@ -157,14 +157,14 @@
 \section{Campus Involvement}
   \resumeSubHeadingListStart
 
-    \resumeSubheading{Head of Development and Risk}{January 2024 -- Present}{Stevens Student Managed Investment Fund}{\empty}
+    \resumeSubheading{Head of Development and Risk}{January 2024 -- Present}{Student Managed Investment Fund}{\empty}
     \resumeItemListStart
       \resumeItem{Leading a team of 5 developers, facilitating communication with fund management to align development goals with overall strategy}
       \resumeItem{Built a responsive React.js frontend and Flask API for a portfolio dashboard leveraging yahoo finance’s web API, leading to more informed decision-making for the fund}
       \resumeItem{Designed and deployed a containerized PostgreSQL database to store price data and portfolio activity, providing a consolidated source for portfolio information and reducing time spent searching for data}
       \resumeItem{Heading team recruitment by reviewing resumes, creating coding challenges, and conducting interviews, ensuring continuity in the team’s operations in future semesters}
     \resumeItemListEnd
-    \resumeSubheading{Starting Team Member}{September 2022 -- Present}{Stevens NCAA Division III Fencing Team}{\empty}
+    \resumeSubheading{Starting Team Member}{September 2022 -- Present}{NCAA Division III Fencing Team}{\empty}
     \resumeItemListStart
       \resumeItem{Committing approximately 30 hours per week to practice, conditioning, and travel to ~12 meets per season}
       \resumeItem{Strengthened leadership and coaching skills under a high-pressure, stressful environment}
@@ -174,19 +174,19 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading{\textbf{Sticky Notes Application} $|$ \href{https://github.com/andrewyur/md-sticky}{\underline{\smash{https://github.com/andrewyur/md-sticky}}}}{September 2024}
+      \resumeProjectHeading{\textbf{Sticky Notes Application} $|$ \href{https://github.com/github-link}{\underline{\smash{https://github.com/github-link}}}}{September 2024}
       \resumeItemListStart
         \resumeItem{Developed a sticky notes app to fit my personal workflow after being dissatisfied with existing options, creating a tool which I now use daily}
         \resumeItem{Added a text editor with markdown support, a color selection menu, and keyboard shortcuts for window management}
       \resumeItemListEnd
-      \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://collab-notepad.super-youtube.com}{\underline{\smash{https://collab-notepad.super-youtube.com}}}}{
+      \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://deploy-link}{\underline{\smash{https://deploy-link}}}}{
         June 2024 -- August 2024}
       \resumeItemListStart
         \resumeItem{Built a collaborative text editor using my own Operational Transformation algorithm, ensuring both responsiveness and accuracy on slow connections}
         \resumeItem{Designed an Elixir backend with WebSocket API to enable communication between the server and web clients, using Erlang’s OTP library to improve fault tolerance}
       \resumeItemListEnd
-      \resumeProjectHeading{\textbf{QR Image Encoder} $|$ \href{https://crates.io/crates/qart
-      }{\underline{\smash{https://crates.io/crates/qart}
+      \resumeProjectHeading{\textbf{QR Image Encoder} $|$ \href{https://crates.io/crate-link
+      }{\underline{\smash{https://crates.io/crate-link}
       }}}{June 2024}
       \resumeItemListStart
         \resumeItem{Published a Rust-based QR image encoder that surpassed 350 downloads in 10 days, utilizing multithreading to achieve 100x performance improvement over comparable tools}
