--- a/resume.tex
+++ b/resume.tex
@@ -136,10 +136,10 @@
       {Software Engineering Intern}{May 2024 -- August 2024}
       {Jacobs Technology, Aviation Suite}{Hudson, NH}
       \resumeItemListStart
+        \resumeItem{Developed logging for capacity limits in the main product, while maintaining 100\% code coverage and compliance with strict data management requirements}
         \resumeItem{Led development of error handling features for an internal optimization tool written with .NET, streamlining load testing and improving test efficiency}
         \resumeItem{Implemented input screening, preventing optimization on invalid parameters, saving testers hours for every error caught}
         \resumeItem{Revamped the progress and results screens, adding more descriptive progress messages, and an error screen that explained the cause of the error, immensely reducing time spent tracing errors}
-        \resumeItem{Developed logging for capacity limits in the main product, while maintaining 100\% code coverage and compliance with strict data management requirements}
       \resumeItemListEnd
     \resumeSubHeadingListEnd
       
@@ -202,7 +202,7 @@
     \small{\item{
      \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS} \\
      \textbf{Frameworks}{: React, Svelte, Flask, Express, .NET Framework/Core} \\
-     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code, Visual Studio, Azure}
+     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code, Visual Studio, Azure, Agile Methodologies}
     }}
  \end{itemize}
 
