--- a/resume.tex
+++ b/resume.tex
@@ -114,7 +114,7 @@
 \begin{center}
     \textbf{\Huge \scshape Andrew Yurovchak} \\ \vspace{3pt}
     \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} $|$
-    \href{https://portfolio.super-youtube.com}{\underline{\smash{portfolio.super-youtube.com}}} \\ \vspace{-3pt}
+    \href{https://portfolio.baetylboy.biz}{\underline{\smash{portfolio.baetylboy.biz}}} \\ \vspace{-3pt}
 \end{center}
 
 
@@ -160,7 +160,7 @@
     \resumeSubheading{Head of Development and Risk}{January 2024 -- Present}{Stevens Student Managed Investment Fund}{\empty}
     \resumeItemListStart
       \resumeItem{Leading a team of 5 developers, facilitating communication with fund management to align development goals with overall strategy}
-      \resumeItem{Built a responsive React.js frontend and Flask API for a portfolio dashboard leveraging yahoo finance’s web API, leading to more informed decision-making for the fund}
+      \resumeItem{Built a responsive React.js \& NextJS frontend and Flask API for a portfolio dashboard leveraging yahoo finance’s web API, leading to more informed decision-making for the fund}
       \resumeItem{Designed and deployed a containerized PostgreSQL database to store price data and portfolio activity, providing a consolidated source for portfolio information and reducing time spent searching for data}
       \resumeItem{Heading team recruitment by reviewing resumes, creating coding challenges, and conducting interviews, ensuring continuity in the team’s operations in future semesters}
     \resumeItemListEnd
@@ -179,7 +179,7 @@
         \resumeItem{Developed a sticky notes app to fit my personal workflow after being dissatisfied with existing options, creating a tool which I now use daily}
         \resumeItem{Added a text editor with markdown support, a color selection menu, and keyboard shortcuts for window management}
       \resumeItemListEnd
-      \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://collab-notepad.super-youtube.com}{\underline{\smash{https://collab-notepad.super-youtube.com}}}}{
+      \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://collab-notepad.baetylboy.biz}{\underline{\smash{https://collab-notepad.baetylboy.biz}}}}{
         June 2024 -- August 2024}
       \resumeItemListStart
         \resumeItem{Built a collaborative text editor using my own Operational Transformation algorithm, ensuring both responsiveness and accuracy on slow connections}
@@ -200,9 +200,9 @@
 \section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS} \\
-     \textbf{Frameworks}{: React, Svelte, Flask, Express, .NET Framework/Core} \\
-     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code, Visual Studio, Azure, Agile Methodologies}
+     \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS, SQL} \\
+     \textbf{Frameworks}{: React, Svelte, Flask, Express, .NET Framework/Core, NextJS} \\
+     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code, Visual Studio, Azure, Agile Methodologies, CI/CD}
     }}
  \end{itemize}
 
