--- a/resume.tex
+++ b/resume.tex
@@ -124,9 +124,19 @@
     \resumeSubheading
       {Stevens Institute of Technology}{September 2022 -- May 2026}
       {Bachelor of Science in Computer Science}{Hoboken, NJ}
-    \resumeSubItem{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
+    \resumeSubSubheading{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}{GPA: 3.7}
   \resumeSubHeadingListEnd
 
+
+%-----------PROGRAMMING SKILLS-----------
+\section{Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS, SQL} \\
+     \textbf{Frameworks}{: React, Svelte, Flask, Express, .NET Framework/Core, NextJS} \\
+     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code \& Visual Studio, Azure}
+    }}
+ \end{itemize}
 
 %-----------EXPERIENCE-----------
 \section{Experience}
@@ -136,10 +146,10 @@
       {Software Engineering Intern}{May 2024 -- August 2024}
       {Jacobs Technology, Aviation Suite}{Hudson, NH}
       \resumeItemListStart
-        \resumeItem{Developed logging for capacity limits in the main product, while maintaining 100\% code coverage and compliance with strict data management requirements}
-        \resumeItem{Led development of error handling features for an internal optimization tool written with .NET, streamlining load testing and improving test efficiency}
-        \resumeItem{Implemented input screening, preventing optimization on invalid parameters, saving testers hours for every error caught}
-        \resumeItem{Revamped the progress and results screens, adding more descriptive progress messages, and an error screen that explained the cause of the error, immensely reducing time spent tracing errors}
+        \resumeItem{Built logging for capacity limits in NavDBTool, the core platform for navigational data packing, maintaining 100\% code coverage and ensuring compliance with strict data management requirements}
+        \resumeItem{For a .NET-based internal optimization tool, led development of error handling features that improved usability and accelerated load testing workflows}
+        \resumeItem{Implemented input screening on the optimization tool, preventing operations on invalid parameters, saving testers hours for each error prevented}
+        \resumeItem{Revamped the tool's progress and results screens with detailed progress messages and error explanations, drastically reducing time spent tracing errors}
       \resumeItemListEnd
     \resumeSubHeadingListEnd
       
@@ -160,7 +170,7 @@
     \resumeSubheading{Head of Development and Risk}{January 2024 -- Present}{Stevens Student Managed Investment Fund}{\empty}
     \resumeItemListStart
       \resumeItem{Leading a team of 5 developers, facilitating communication with fund management to align development goals with overall strategy}
-      \resumeItem{Built a responsive React.js \& NextJS frontend and Flask API for a portfolio dashboard leveraging yahoo finance’s web API, leading to more informed decision-making for the fund}
+      \resumeItem{Created a responsive React.js \& NextJS frontend and Flask API for a portfolio dashboard leveraging yahoo finance’s web API, leading to more informed decision-making for the fund}
       \resumeItem{Designed and deployed a containerized PostgreSQL database to store price data and portfolio activity, providing a consolidated source for portfolio information and reducing time spent searching for data}
       \resumeItem{Heading team recruitment by reviewing resumes, creating coding challenges, and conducting interviews, ensuring continuity in the team’s operations in future semesters}
     \resumeItemListEnd
@@ -195,16 +205,6 @@
 
 
 
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS, SQL} \\
-     \textbf{Frameworks}{: React, Svelte, Flask, Express, .NET Framework/Core, NextJS} \\
-     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code, Visual Studio, Azure, Agile Methodologies, CI/CD}
-    }}
- \end{itemize}
 
 
 %-------------------------------------------
