--- a/resume.tex
+++ b/resume.tex
@@ -123,8 +123,9 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Stevens Institute of Technology}{September 2022 -- May 2026}
-      {Bachelor of Science in Computer Science}{Hoboken, NJ}
-    \resumeSubSubheading{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}{GPA: 3.7}
+      {Bachelor of Science in Computer Science, GPA: 3.7}{Hoboken, NJ}
+    \resumeSubItem{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
+    \resumeSubItem{Coursework: Web Development, Database Management, Data Structures \& Algorithms, Systems Programming}
   \resumeSubHeadingListEnd
 
 
