--- a/resume.tex
+++ b/resume.tex
@@ -90,7 +90,7 @@
     \end{tabular*}\vspace{-7pt}
 }
 
-\newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
+\newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-5pt}}
 
 \renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
 
@@ -114,7 +114,7 @@
 \begin{center}
     \textbf{\Huge \scshape Andrew Yurovchak} \\ \vspace{3pt}
     \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} $|$
-    \href{https://portfolio.baetylboy.biz}{\underline{\smash{portfolio.baetylboy.biz}}} \\ \vspace{-3pt}
+    \href{https://portfolio.baetylboy.biz}{\underline{\smash{portfolio.baetylboy.biz}}} \\ \vspace{-7pt}
 \end{center}
 
 
@@ -124,8 +124,8 @@
     \resumeSubheading
       {Stevens Institute of Technology}{September 2022 -- May 2026}
       {Bachelor of Science in Computer Science, GPA: 3.7}{Hoboken, NJ}
-    \resumeSubItem{Honors: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
-    \resumeSubItem{Coursework: Web Development, Database Management, Data Structures \& Algorithms, Systems Programming}
+    \resumeSubItem{\textbf{Honors}: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
+    \resumeSubItem{\textbf{Coursework}: Web Development, Database Management, Data Structures \& Algorithms, Systems Programming}
   \resumeSubHeadingListEnd
 
 
