--- a/resume.tex
+++ b/resume.tex
@@ -131,13 +131,13 @@
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
+ \resumeSubHeadingListStart
     \small{\item{
-     \textbf{Languages}{: Typescript \& Javascript, Python, C, C\#, Rust, Elixir, HTML/CSS, SQL} \\
-     \textbf{Frameworks}{: React, Svelte, Flask, Express, .NET Framework/Core, NextJS} \\
-     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code \& Visual Studio, Azure}
-    }}
- \end{itemize}
+     \textbf{Languages}{: Typescript \& Javascript, Python, Java, C, C\#, Rust, Elixir, HTML/CSS, SQL} \\
+     \textbf{Frameworks}{: React, Svelte, Flask, .NET Framework/Core, NextJS} \\
+     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code \& Visual Studio, Azure DevOps}
+    }\vspace{-5pt}}
+ \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------
 \section{Experience}
