--- a/resume.tex
+++ b/resume.tex
@@ -114,7 +114,7 @@
 \begin{center}
     \textbf{\Huge \scshape Andrew Yurovchak} \\ \vspace{3pt}
     \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} $|$
-    \href{https://portfolio.baetylboy.biz}{\underline{\smash{portfolio.baetylboy.biz}}} \\ \vspace{-7pt}
+    \href{https://small.baetylboy.biz}{\underline{\smash{small.baetylboy.biz}}} \\ \vspace{-7pt}
 \end{center}
 
 
