--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 
 % serif
 % \usepackage{CormorantGaramond}
-% \usepackage{charter}
+\usepackage{charter}
 
 
 \pagestyle{fancy}
@@ -125,7 +125,7 @@
       {Stevens Institute of Technology}{September 2022 -- May 2026}
       {Bachelor of Science in Computer Science, GPA: 3.7}{Hoboken, NJ}
     \resumeSubItem{\textbf{Honors}: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
-    \resumeSubItem{\textbf{Coursework}: Web Development, Database Management, Data Structures \& Algorithms, Systems Programming}
+    \resumeSubItem{\textbf{Coursework}: DevOps Methodologies, Database Management, Data Structures \& Algorithms, Concurrent Programming}
   \resumeSubHeadingListEnd
 
 
@@ -134,8 +134,8 @@
  \resumeSubHeadingListStart
     \small{\item{
      \textbf{Languages}{: Typescript \& Javascript, Python, Java, C, C\#, Rust, Elixir, HTML/CSS, SQL} \\
-     \textbf{Frameworks}{: React, Svelte, Flask, .NET Framework/Core, NextJS} \\
-     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, VS Code \& Visual Studio, Azure DevOps}
+     \textbf{Frameworks}{: React, Svelte, Flask, .NET Core/Framework, NextJS} \\
+     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, Kubernetes, GitHub Actions, Linux/Unix}
     }\vspace{-5pt}}
  \resumeSubHeadingListEnd
 
