--- a/resume.tex
+++ b/resume.tex
@@ -115,8 +115,12 @@
 
 \begin{center}
     \textbf{\Huge \scshape Andrew Yurovchak} \\ \vspace{3pt}
-    \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} $|$
-    \href{https://small.baetylboy.biz}{\underline{\smash{small.baetylboy.biz}}} \\ \vspace{-7pt}
+    \small 603-321-9446 $|$ \href{mailto:andy@yurovchak.net}{\underline{\smash{andy@yurovchak.net}}} $|$ \small{Hoboken, NJ} 
+    % $|$
+    % \href{https://small.baetylboy.biz}{\underline{\smash{small.baetylboy.biz}}} 
+    $|$
+    \small{\textbf{Interim Secret Clearance}}
+    \\ \vspace{-7pt}
 \end{center}
 
 
@@ -125,9 +129,9 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Stevens Institute of Technology}{September 2022 -- May 2026}
-      {Bachelor of Science in Computer Science, GPA: 3.7/4.0}{Hoboken, NJ}
-    \resumeSubItem{\textbf{Honors}: Dean's List (Fall 2022, Spring 2023, Spring 2024), NCAA All-Academic Team 2023}
-    \resumeSubItem{\textbf{Coursework}: DevOps Methodologies, Database Management, Data Structures \& Algorithms, Concurrent Programming}
+      {Bachelor of Science in Computer Science, GPA: \textbf{3.74/4.00}}{Hoboken, NJ}
+    \resumeSubItem{\textbf{Honors}: Dean's List (5 Semesters), USFCA All-Region, NCAA All-American}
+    \resumeSubItem{\textbf{Coursework}: Operating Systems, Database Management, Web Development, Data Structures \& Algorithms}
     \vspace{-10pt}
   \resumeSubHeadingListEnd
 
@@ -137,8 +141,8 @@
  \resumeSubHeadingListStart
     \small{\item{
      \textbf{Languages}{: Typescript \& Javascript, Python, C\#, Rust, Nix, Elixir, HTML \& CSS, SQL} \\
-     \textbf{Frameworks}{: React, Svelte, Flask, .NET Core/Framework, NextJS} \\
-     \textbf{Developer Tools}{: Git, Docker, Google Cloud Platform, Kubernetes, GitHub Actions, Linux/Unix, PostgreSQL}
+     \textbf{Frameworks}{: React, Svelte, Vue, Flask, .NET Core/Framework, NextJS} \\
+     \textbf{Developer Tools}{: Git, Docker, Buildah, Podman, Kubernetes, GitHub Actions, Linux/Unix, Bash}
     }\vspace{-5pt}}
  \resumeSubHeadingListEnd
 
@@ -147,13 +151,24 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
+      {Software Engineering Intern III}{May 2025 -- Present}
+      {BAE Systems, C4ISR -- SP-12 (under Mark McCormack)}{Hudson, NH}
+      \resumeItemListStart
+        \resumeItem{Created a Web UI with \textbf{Vue} \& \textbf{TypeScript} for Phoenix's Skill Upload interface }
+        \resumeItem{Rewrote existing \textbf{Dockerfiles}, reducing build time from \textbf{6m20s} to \textbf{5s} (\textbf{98\%}) by leveraging \textbf{layer caching}}
+        \resumeItem{Documented the process for attaching a debugger to a process running inside a \textbf{Kubernetes} Pod}
+      \resumeItemListEnd
+    \resumeSubHeadingListEnd
+  \resumeSubHeadingListStart
+
+    \resumeSubheading
       {Software Engineering Intern}{May 2024 -- August 2024}
       {Jacobs Technology, Aviation Suite}{Hudson, NH}
       \resumeItemListStart
-        \resumeItem{Expanded logging capacities for the main product, maintaining \textbf{100\% code coverage} and ensuring compliance with \textbf{strict data management requirements}}
-        \resumeItem{Led development of error handling features for a \textbf{.NET}-based optimization tool, improving usability}
-        \resumeItem{Implemented input screening that prevented operations on invalid parameters, \textbf{saving hours} for each error caught}
-        \resumeItem{Revamped the tool's progress and results screens, drastically \textbf{reducing time spent} tracing errors}
+        \resumeItem{Developed error handling features and input screening for a \textbf{.NET}-based optimization tool, improving usability}
+        \resumeItem{Expanded logging capacities for a suite of \textbf{.NET} data packing applications}
+        \resumeItem{Fixed various bugs and implemented minor features across the company's software products}
+        \resumeItem{Gained experience working as a developer in an \textbf{agile programming} environment}
       \resumeItemListEnd
     \resumeSubHeadingListEnd
       
@@ -173,37 +188,37 @@
 
     \resumeSubheading{Head of Development and Risk}{January 2024 -- Present}{Stevens Student Managed Investment Fund}{\empty}
     \resumeItemListStart
-      \resumeItem{\textbf{Managing a team of 5 developers}, communicating with fund management to set development goals}
-      \resumeItem{Created a \textbf{React.js} \& \textbf{NextJS} frontend and \textbf{Python Flask} API for a portfolio dashboard and metrics display}
-      \resumeItem{Designed and deployed a \textbf{containerized PostgreSQL} database to store price data and portfolio activity}
-      \resumeItem{Leading recruitment efforts for the team, creating a coding challenge and conducting interviews}
+      \resumeItem{Created a \textbf{React \& NextJS} frontend portfolio dashboard with a caching layer }
+      \resumeItem{Built a containerized \textbf{Flask API} to forward data pulled from yfinance to the metrics page }
+      \resumeItem{Created scaffolds for portfolio activity and holdings pages}
+      \resumeItem{Fixed various website outages and hosting platform issues}
+      \resumeItem{\textbf{Managed} a team of \textbf{4 developers} and led recruitment efforts for the team}
     \resumeItemListEnd
     \resumeSubheading{Starting Team Member}{September 2022 -- Present}{Stevens NCAA Division III Fencing Team}{\empty}
     \resumeItemListStart
       \resumeItem{Committing approximately 30 hours per week to practice, conditioning, and travel to 12 meets per season}
-      \resumeItem{Strengthened \textbf{leadership} and \textbf{coaching} skills under a high-pressure, stressful environment}
+      \resumeItem{Strengthened \textbf{leadership and coaching skills} under a high-pressure, stressful environment}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading{\textbf{Sticky Notes Application} $|$ \href{https://github.com/andrewyur/md-sticky}{\underline{\smash{https://github.com/andrewyur/md-sticky}}}}{September 2024}
+      \resumeProjectHeading{\textbf{Photography Portfolio Website} $|$ \href{https://photos.baetylboy.biz}{\underline{\smash{https://photos.baetylboy.biz}}}}{September 2024}
       \resumeItemListStart
-        \resumeItem{Developed a sticky notes app in \textbf{Rust} \& \textbf{Svelte} with \textbf{Tauri} to fit my personal workflow}
-        \resumeItem{Added a text editor with markdown support, a color selection menu, and window management shortcuts}
+        \resumeItem{\textbf{Reverse Engineered} a minified \textbf{JavaScript} client for a private Apple API}
+        \resumeItem{Created a \textbf{Responsive} website with \textbf{Svelte}, that loads photos from Apple Photos}
       \resumeItemListEnd
       \resumeProjectHeading{\textbf{Collaborative Text Editor} $|$ \href{https://collab-notepad.baetylboy.biz}{\underline{\smash{https://collab-notepad.baetylboy.biz}}}}{
         June 2024 -- August 2024}
       \resumeItemListStart
-        \resumeItem{Built a collaborative text editor using my own \textbf{Operational Transformation} algorithm, ensuring both responsiveness and accuracy on slow connections}
-        \resumeItem{Designed an \textbf{Elixir} backend with \textbf{WebSocket} API, using \textbf{Erlang’s OTP} library to improve \textbf{fault tolerance}}
+        \resumeItem{Built a collaborative text editor and \textbf{created my own algorithm} for resolving edit conflicts}
+        \resumeItem{Designed an \textbf{Elixir} backend with \textbf{WebSocket API}, and utilized \textbf{unit testing} to find bugs}
       \resumeItemListEnd
-      \resumeProjectHeading{\textbf{QR Image Encoder} $|$ \href{https://crates.io/crates/qart
-      }{\underline{\smash{https://crates.io/crates/qart}
+      \resumeProjectHeading{\textbf{QR Image Encoder} $|$ \href{https://crates.io/crates/qart}{\underline{\smash{https://crates.io/crates/qart}
       }}}{June 2024}
       \resumeItemListStart
-        \resumeItem{Published a \textbf{Rust}-based QR image encoder nearing \textbf{1000 downloads} on crates.io, utilizing multithreading to achieve \textbf{100x} performance improvement over comparable tools}
+        \resumeItem{Published a Rust-based QR image encoder nearing \textbf{2000 downloads} on crates.io, utilizing multithreading to achieve \textbf{100x performance improvement} over comparable tools}
       \resumeItemListEnd
     \resumeSubHeadingListEnd
 
