--- a/resume.tex
+++ b/resume.tex
@@ -130,7 +130,7 @@
     \resumeSubheading
       {Stevens Institute of Technology}{September 2022 -- May 2026}
       {Bachelor of Science in Computer Science, GPA: \textbf{3.74/4.00}}{Hoboken, NJ}
-    \resumeSubItem{\textbf{Honors}: Dean's List (5 Semesters), USFCA All-Region, NCAA All-American}
+    \resumeSubItem{\textbf{Honors}: Dean's List (5 Semesters), USFCA All-Region, NCAA All-American Honorable Mention}
     \resumeSubItem{\textbf{Coursework}: Operating Systems, Database Management, Web Development, Data Structures \& Algorithms}
     \vspace{-10pt}
   \resumeSubHeadingListEnd
